--- a/.github/workflows/r_nold.yml
+++ b/.github/workflows/r_nold.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           apt update && apt install libcurl4-openssl-dev libssl-dev libssh2-1-dev libgit2-dev libglpk-dev libxml2-dev libharfbuzz-dev libfribidi-dev git -y
 
-      - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
+      - uses: actions/checkout@v4
         with:
           submodules: 'true'
 
