Move all commands to separate script files

--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -27,8 +27,5 @@ jobs:
             pkg install -y cmake git ninja googletest
 
           run: |
-            mkdir build
-            cd build
-            cmake .. -GNinja -DGOOGLE_TEST=ON
-            ninja -v
-            ./testxgboost
+            bash ops/script/build_via_cmake.sh
+            ./build/testxgboost
