--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -25,17 +25,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: 'true'
-      - uses: conda-incubator/setup-miniconda@v3
+      - uses: dmlc/xgboost/actions/miniforge-setup@master
         with:
-          miniforge-variant: Miniforge3
-          miniforge-version: latest
-          activate-environment: sdist_test
+          environment-name: sdist_test
           environment-file: ops/conda_env/sdist_test.yml
-          use-mamba: true
-      - name: Display Conda env
-        run: |
-          conda info
-          conda list
       - name: Install extra package for MacOS
         run: |
           mamba install -c conda-forge llvm-openmp
@@ -51,20 +44,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: 'true'
-
-      - uses: conda-incubator/setup-miniconda@v3
+      - uses: dmlc/xgboost/actions/miniforge-setup@master
         with:
-          miniforge-variant: Miniforge3
-          miniforge-version: latest
-          activate-environment: macos_cpu_test
+          environment-name: macos_cpu_test
           environment-file: ops/conda_env/macos_cpu_test.yml
-          use-mamba: true
-
-      - name: Display Conda env
-        run: |
-          conda info
-          conda list
-
       - run: bash ops/pipeline/test-python-macos.sh
 
   python-system-installation-on-ubuntu:
