--- a/.github/workflows/misc.yml
+++ b/.github/workflows/misc.yml
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: 'true'
-      - uses: dmlc/xgboost/actions/miniforge-setup@master
+      - uses: dmlc/xgboost-devops/miniforge-setup@main
         with:
           environment-name: cpp_test
           environment-file: ops/conda_env/cpp_test.yml
