--- a/.github/workflows/sycl_tests.yml
+++ b/.github/workflows/sycl_tests.yml
@@ -25,7 +25,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: 'true'
-    - uses: dmlc/xgboost/actions/miniforge-setup@master
+    - uses: dmlc/xgboost-devops/miniforge-setup@main
       with:
         environment-name: linux_sycl_test
         environment-file: ops/conda_env/linux_sycl_test.yml
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: 'true'
-      - uses: dmlc/xgboost/actions/miniforge-setup@master
+      - uses: dmlc/xgboost-devops/miniforge-setup@main
         with:
           environment-name: linux_sycl_test
           environment-file: ops/conda_env/linux_sycl_test.yml
